// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieList Component matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="px-6"
  >
    <h1
      class="text-3xl py-4 text-white"
    >
      Popular Movies
    </h1>
    <div
      class="flex overflow-x-scroll"
    >
      <div
        class="flex"
      >
        <div
          data-testid="movie-card"
        >
          <img
            alt="Movie 1"
            src="/poster1.jpg"
          />
          <p>
            Movie 1
          </p>
        </div>
        <div
          data-testid="movie-card"
        >
          <img
            alt="Movie 2"
            src="/poster2.jpg"
          />
          <p>
            Movie 2
          </p>
        </div>
        <div
          data-testid="movie-card"
        >
          <img
            alt="Movie 3"
            src="/poster3.jpg"
          />
          <p>
            Movie 3
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MovieList Component matches snapshot with empty movies list 1`] = `
<DocumentFragment>
  <div
    class="px-6"
  >
    <h1
      class="text-3xl py-4 text-white"
    >
      Popular Movies
    </h1>
    <div
      class="flex overflow-x-scroll"
    >
      <div
        class="flex"
      />
    </div>
  </div>
</DocumentFragment>
`;
